
    * Command-line arguments that have a short version and can be negated
      with '--no-*' can now be negated in short form by using '+' instead
      of '-', for example '+x' for '--no-execute'.

    * Manifest files for E repositories are now generated with the lines in the
      same order as Portage.

    * The SHA-512 and Whirlpool functions are now supported in Manifest files.

0.68.0:
    * Licence groups are now supported.

    * Various bug fixes.

0.66.0:
    * The short options for 'cave owner' and 'cave print-owner' have changed.

    * Support for directory whitelisting for exheres-0.

    * Various bug fixes.

0.64.3:
    * Fixed a bug where a ! inside a || ( ) could cause a segfault.

    * Assorted minor bug fixes and compiler compatibility changes.

0.64.2:
    * The Python bindings now cover various additional things.

    * CONFIG_PROTECT is now available for merge-check hooks.

    * When using Portage format configurations, userpriv is now available.

0.64.1:
    * 'cave resolve --keep if-same-metadata' now thinks "cat/pkg[a][b]" and
      "cat/pkg[b][a]" are "the same".

    * Support for Portage-format configurations has been improved slightly.

0.64.0:
    * Support for Gentoo old-style virtuals has been removed.

    * The 'accerso', 'instruo' and 'appareo' clients have been removed in favour
      of 'cave'.

    * 'cave resolve' now has 'if-same-metadata' options for '--keep' and
      '--keep-targets', to take care of all those times when Gentoo developers
      ignore policy and change dependencies without a revbump.

    * Dependent IDs now have their dependency type (e.g. 'build', 'runtime')
      shown in the reasons output for 'cave resolve' and 'cave uninstall'.

0.62.2:
    * 'cave fix-linkage' no longer gets upset at .la files that are missing a
      final newline character.

0.62.1:
    * 'cave resolve --hide' now affects resolvent selection too.

    * Various minor bug fixes.

0.62.0: