@@ -94,6 +94,11 @@ for <code>e</code> format repositories:</p>
     <dd>Whether to use Manifest2. Valid values are <code>use</code>, <code>require</code> or <code>ignore</code>.
     Optional.</dd>
 
+    <dt><code>manifest_hashes</code></dt>
+    <dd>Space-separated list of hash functions to use when generating <code>Manifest</code> files. Supported values are
+    <code>MD5</code>, <code>RMD160</code>, <code>SHA1</code>, <code>SHA256</code>, <code>SHA512</code> and
+    <code>WHIRLPOOL</code>. Optional, usually set by the distribution or the repository's <code>metadata/layout.conf</code>.
+
     <dt><code>binary_destination</code></dt>
     <dd>If set to <code>true</code>, this repository is treated as a destination when creating binary packages.</dd>
 
