@@ -3,6 +3,7 @@ default_distdir = /var/cache/paludis/distfiles
 default_eapi_when_unknown = exheres-0
 default_eapi_when_unspecified = exheres-0
 default_layout = exheres
+default_manifest_hashes =
 default_names_cache = /var/cache/paludis/names
 default_profile_eapi = exheres-0
 default_profile_layout = exheres
