@@ -3,6 +3,7 @@ default_distdir = distfiles
 default_eapi_when_unknown = 0
 default_eapi_when_unspecified = 0
 default_layout = traditional
+default_manifest_hashes = RMD160 SHA1 SHA256
 default_profile_layout = traditional
 default_names_cache =
 default_profile_eapi = 0
